--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,13 @@
+plugins {
+    id 'java'
+    id 'maven-publish'
+}
+
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 
 group = 'com.goyanov'
-version = '1.0.0'
+version = '1.2'
 
 buildscript {
     repositories {
@@ -78,8 +83,8 @@ if(hasProperty('target') && target == 'android') {
     apply plugin: 'java'
     apply plugin: 'maven-publish'
 
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 
     publishing {
         publications {
